--- a/css/style.css
+++ b/css/style.css
@@ -2896,7 +2896,9 @@ option {
 .mega-menu {
   width: 300px; /* Adjust the width as needed */
 }
-
+form a input:hover{
+  background-color: #000;
+}
 .mega-menu-links li a {
   display: block;
   padding: 8px 16px;
@@ -2905,5 +2907,33 @@ option {
 }
 
 .mega-menu-links li a:hover {
+  background-color: #ddd;
+}
+.payment-method {
+  position: relative;
+  display: inline-block;
+}
+
+.payment-links {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.payment-method:hover .payment-links {
+  display: block;
+}
+
+.payment-links a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.payment-links a:hover {
   background-color: #ddd;
 }
