Sửa lại giao diện trang admin nhìn gọn hơn

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -231,7 +231,7 @@ form button{
 
 nav.box-left {
     width: 200px;
-    background-color: #4e73df;
+    background-color: #587deb;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     position: fixed;
