--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -245,14 +245,14 @@ nav.box-left ul {
     list-style: none;
 }
 
-nav.box-left ul li {
+/* nav.box-left ul li {
     margin-bottom: 15px;
-}
+} */
 
 nav.box-left ul li a {
     color: #fff;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 20px 15px;
     display: block;
     border-radius: 4px;
     transition: background-color 0.3s, color 0.3s;
