--- a/css/style.css
+++ b/css/style.css
@@ -570,7 +570,7 @@ ul.dropdown-menu > li > a:hover {
   position: relative;
   float: right;
   width: auto;
-  margin-top: 20px;
+  margin-top: 42px;
   z-index: 1;
 }
 .search {
@@ -627,7 +627,7 @@ ul.dropdown-menu > li > a:hover {
   float: right;
   width: 32px;
   height: 32px;
-  margin-right: 24px;
+  /* margin-right: 24px; */ 
   background: url(../images/carticon.png) center center no-repeat;
   background-color: rgba(255, 255, 255, 0.1);
   -webkit-border-radius: 5px;
@@ -3001,4 +3001,37 @@ color: #333;
 .info p {
 font-size: 16px;
 color: #666;
+}
+.news{
+  margin-bottom: 20px;
+}
+.newsss{
+  width: 900px;
+  margin-left: 350px;
+}
+.tit{
+  font-size: 25px;
+  margin-bottom: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.intro{
+  font-size: 18px;
+}
+.newss{
+    
+  background-color: #fff;
+}
+.detail{
+  font-family: roboto;
+  width: 1100px;
+  margin-left: 320px;
+  font-size: 20px;
+  padding-bottom: 20px;
+  
+}
+.title{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 20px;
+  font-size: 30px;
+  text-align: center;
 }
