sửa lại giao diện, giao diện trang productdetail, thêm file js, lia link bên heade,

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1131,7 +1131,8 @@ pre code {
     width: 83.33333333333334%;
   }
   .col-md-9 {
-    width: 75%;
+    width: 100%;
+    /* margin-left: 120px; */
   }
   .col-md-8 {
     width: 66.66666666666666%;
@@ -4485,10 +4486,17 @@ a.list-group-item.active > .badge,
 .thumbnail > img,
 .thumbnail a > img {
   display: block;
-  height: auto;
+  /* height: auto; */
   max-width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto; */
+  /* margin-left: auto; */
+  border-radius: 10px;
+  margin-top: -10px;
+  
+    width: auto;
+    height: 100%;
+    margin: 0 auto;
+    object-fit: contain;
 }
 a.thumbnail:hover,
 a.thumbnail:focus,
