--- a/css/style.css
+++ b/css/style.css
@@ -158,10 +158,14 @@ h6 {
   font-size: 14px;
 }
 p {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 300;
   margin: 0 0 10px 0;
   line-height: 18px;
+  margin-bottom: 20px;
+}
+.quantity-control{
+  margin-bottom: 20px;
 }
 .light {
   font-weight: 300;
@@ -298,6 +302,9 @@ textarea {
   font-size: 14px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-align: center;
 }
 input[type="text"]:focus,
 input[type="email"]:focus,
@@ -1014,11 +1021,12 @@ ul.dropdown-menu > li > a:hover {
   float: left;
   position: relative;
   width: 100%;
-  margin: 45px 0 5px 0;
+  /* margin: 45px 0 5px 0; */
   padding: 0;
-  height: 230px;
+  height: 380px;
   border: none;
   text-align: center;
+  overflow: hidden;
 }
 .productname {
   float: left;
@@ -1656,7 +1664,7 @@ option {
 }
 .preview_image {
   float: left;
-  width: 330px;
+  width: 400px;
   position: relative;
   margin-bottom: 15px;
   padding-bottom: 15px;
@@ -1664,6 +1672,7 @@ option {
   -webkit-border-radius: 10px;
   border-radius: 10px;
   display: block;
+  margin-right: 100px;
 }
 .preview-small {
   display: block;
@@ -1712,7 +1721,7 @@ option {
 .thum-image .control-left,
 .thum-image .control-right {
   position: absolute;
-  top: 20px;
+  top: 414px;
   left: -20px;
   font-size: 20px;
   color: #b0b0b0;
@@ -1737,7 +1746,8 @@ option {
 }
 .products-description .name {
   font-weight: 400;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+  text-align: center;
 }
 .border {
   border-color: #e1e1e1;
@@ -1747,12 +1757,14 @@ option {
   width: 100%;
   font-size: 13px;
   vertical-align: middle;
+  margin-bottom: 20px;
+    margin-top: 20px;
 }
 .products-description .price .new_price {
   font-size: 30px;
   color: #ff3636;
   font-weight: 500;
-  margin-left: 30px;
+  margin-left: 85px;
 }
 .products-description .new_price sup {
   font-size: 18px;
@@ -1777,12 +1789,15 @@ option {
   width: auto;
   font-size: 13px;
   vertical-align: middle;
+  margin-right: 50px;
+  margin-bottom: 20px;
 }
 .products-description .qty select {
-  margin-left: 30px;
+  margin-left: 80px;
 }
 .products-description .button_group {
   float: right;
+  margin-right: 165px;
 } /** tab style **/
 .tab-box {
   position: relative;
