--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ textarea {
   border-radius: 10px;
   margin-left: 15px;
   margin-right: 15px;
-  text-align: center;
+  /* text-align: center; */
 }
 input[type="text"]:focus,
 input[type="email"]:focus,
@@ -367,6 +367,7 @@ button:hover {
   position: relative;
   z-index: 100;
   top: 0;
+  height: 140px;
 }
 .header {
   position: relative;
@@ -375,7 +376,7 @@ button:hover {
 .logo {
   float: left;
   position: relative;
-  padding: 20px 0;
+  /* padding: 20px 0; */
 }
 .header_top {
   float: right;
@@ -578,7 +579,7 @@ ul.dropdown-menu > li > a:hover {
   position: relative;
   float: right;
   width: auto;
-  margin-top: 42px;
+  margin-top: 20px;
   z-index: 1;
 }
 .search {
@@ -605,11 +606,11 @@ ul.dropdown-menu > li > a:hover {
 }
 .search-input {
   position: absolute;
-  top: 35px;
-  right: 0;
+  /* top: 35px; */
+  right: 20px;
   outline: none;
   background: #fff;
-  width: 220px;
+  width: 180px;
   height: 36px;
   margin: 0;
   z-index: 1000;
@@ -620,7 +621,7 @@ ul.dropdown-menu > li > a:hover {
   border: 1px solid #f7544a;
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  display: none;
+  /* display: none; */
 }
 .search form:hover .search-input {
   display: block;
@@ -2121,11 +2122,12 @@ option {
 }
 .checkout-steps .steps {
   float: left;
-  width: 100%;
+  /* width: 100%; */
   border: 1px solid #cccccc;
   -webkit-border-radius: 10px;
   border-radius: 10px;
   margin-bottom: 10px;
+  margin-left: 240px;
 }
 .checkout-steps .step-title {
   float: left;
@@ -2174,6 +2176,11 @@ option {
 .new-customer p.requir {
   float: left;
   padding: 25px 0 30px 0;
+}
+.rows{
+    width: 400px;
+    text-align: center;
+    margin-left: 133px;
 }
 .form-row .input[type="text"],
 .form-row .input[type="email"],
