--- a/css/style.css
+++ b/css/style.css
@@ -3058,3 +3058,173 @@ color: #666;
   font-size: 30px;
   text-align: center;
 }
+.fullwidth-container {
+  width: 100%;
+  padding: 20px;
+}
+
+.content-container {
+  max-width: 500px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-left: 500px;
+}
+
+.logo img {
+  display: block;
+  margin: 0 auto 20px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+padding-top: 10px;
+  width: 1084px;
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+  margin-right: 300px
+}
+
+.form-group input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.checkbox-group {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-group input {
+  margin-right: 10px;
+}
+
+button {
+  padding: 10px;
+  background-color: #4cae4c;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #4cae4c;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #e0e0e0;
+  margin: 20px 0;
+}
+
+.additional-options {
+  text-align: center;
+}
+
+.additional-options p {
+  margin: 5px 0;
+}
+
+.additional-options a {
+color: #5cb85c;
+text-decoration: none;
+}
+
+.additional-options a:hover {
+  text-decoration: underline;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
+}
+
+.col-md-9 {
+  width: 75%;
+  padding: 0 15px;
+}
+
+.checkout-page {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+h2 {
+  margin-top: 0;
+  color: #333;
+  font-size: 24px;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+}
+
+form {
+  margin-top: 20px;
+}
+
+h5 {
+  margin: 10px 0;
+  color: #333;
+}
+
+
+
+button {
+  background-color: #5cb85c;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #4cae4c;
+}
+
+a {
+  color: #5cb85c;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #ddd;
+  margin: 20px 0;
+}
+
+p {
+  margin: 0;
+  color: #666;
+}
+
+@media (max-width: 768px) {
+  .col-md-9 {
+      width: 100%;
+  }
+}
