--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1128,7 +1128,7 @@ pre code {
     width: 91.66666666666666%;
   }
   .col-md-10 {
-    width: 83.33333333333334%;
+    width: 87.333333%;
   }
   .col-md-9 {
     width: 100%;
@@ -1153,7 +1153,7 @@ pre code {
     width: 25%;
   }
   .col-md-2 {
-    width: 16.666666666666664%;
+    width: 12.666667%;
   }
   .col-md-1 {
     width: 8.333333333333332%;
@@ -6167,5 +6167,20 @@ td.visible-print {
   th.hidden-print,
   td.hidden-print {
     display: none !important;
+  }
+}
+@font-face {
+  font-family: div1;
+  src: url(font/UTM\ Duepuntozero.ttf);
+}
+
+@media screen and (max-width: 1024px) {
+  .divdai {
+    width: 48%;
+  }
+}
+@media screen and (max-width: 720px) {
+  .divdai {
+    width: 100%;
   }
 }
