--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -221,3 +221,18 @@ html[xmlns] .slides {
     right: 10px;
   }
 }
+@font-face {
+  font-family: div1;
+  src: url(font/UTM\ Duepuntozero.ttf);
+}
+
+@media screen and (max-width: 1024px) {
+  .divdai {
+    width: 48%;
+  }
+}
+@media screen and (max-width: 720px) {
+  .divdai {
+    width: 100%;
+  }
+}
