Sửa trang giao diện, sửa trang tin tức đk đn , thêm banner slide

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -70,7 +70,7 @@ html[xmlns] .slides {
   margin-right: 5px;
 } /* Direction Nav */
 .flex-direction-nav {
-  *height: 0;
+  height: 0;
 }
 .flex-direction-nav a {
   text-decoration: none;
@@ -158,7 +158,7 @@ html[xmlns] .slides {
   margin: 0 6px;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
 }
 .flex-control-paging li a {
   width: 11px;
