--- a/css/style.css
+++ b/css/style.css
@@ -3908,7 +3908,7 @@ a input.submit-button:hover {
 
   .form-group input,
   .form-group select {
-    width: 100%;
+    /* width: 100%; */
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     color: #495057;
