Sua giao dien trang admin, bo phan quet ma qr cua thanh toan

--- a/css/style.css
+++ b/css/style.css
@@ -4340,3 +4340,36 @@ p {
     cursor: pointer;
     font-size: 18px;
 }
+.payment-links label {
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  border: 2px solid #e0e0e0;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.payment-links label input {
+  margin-right: 10px;
+}
+.payment-links label:hover {
+  background-color: #f7f7f7;
+  border-color: #007bff;
+}
+
+.online-payment-method {
+  margin-top: 15px;
+  text-align: right;
+  
+}
+
+.d-none {
+  display: none;
+}
+.tttt a {
+  color: red;
+  size: 18px;
+  font-weight: bold;
+
+}
