--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -718,3 +718,88 @@ footer{
     color: white;
 
 }
+.sidebar {
+    width: 230px; 
+    background-color: #4e73df;
+    color: #fff;
+    height: 100vh;
+    overflow-y: auto; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    border-right: 2px solid #f8f9fc; 
+}
+
+.sidebar .logo img {
+    width: 80%; 
+    height: auto;
+    padding: 15px;
+    display: block; 
+    margin: 0 auto; 
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0; 
+}
+
+.sidebar ul li {
+    padding: 0;
+    position: relative;
+}
+
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    padding: 12px 20px; 
+    border-radius: 5px; 
+    transition: background-color 0.3s ease; 
+}
+
+.sidebar ul li a:hover {
+    background-color: #2e59d9; 
+}
+
+.sidebar .nav-link {
+    height: 55px;
+    display: flex;
+    align-items: center;
+    font-size: 16px; 
+}
+
+.sidebar .nav-link i {
+    margin-right: 15px; 
+}
+
+
+.collapse-menu {
+    display: none; 
+    transition: height 0.3s ease;
+}
+
+.collapse-menu.show {
+    display: block; 
+}
+
+.collapse-menu-inner {
+    background-color: #5b86b0; 
+    padding-left: 20px;
+}
+
+.collapse-menu-item {
+    color: #bdc3c7;
+    text-decoration: none;
+    display: block;
+    padding: 10px 25px; 
+    font-size: 14px; 
+    border-radius: 3px; 
+    transition: background-color 0.3s ease;
+}
+
+.collapse-menu-item:hover {
+    background-color: #34495e; 
+}
+
+
